--- a/src/app/pages/sign/sign-page.component.html
+++ b/src/app/pages/sign/sign-page.component.html
@@ -18,7 +18,7 @@
         <button
           mat-raised-button
         >
-          <mat-icon>more_vert</mat-icon>
+          <!-- <mat-icon>more_vert</mat-icon> -->
           <span>Se connecter</span>
         </button>
       </div>
