--- a/src/app/components/item/list-item/list-item.component.html
+++ b/src/app/components/item/list-item/list-item.component.html
@@ -1,12 +1,11 @@
-<div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col" *ngFor="let book of itemList">
-  <a>
-      <div class="pt-3 flex items-center justify-between">
-          <p class="">{{book?.title}}</p>
-          <svg class="h-6 w-6 fill-current text-gray-500 hover:text-black" viewBox="0 0 24 24">
-              <path d="M12,4.595c-1.104-1.006-2.512-1.558-3.996-1.558c-1.578,0-3.072,0.623-4.213,1.758c-2.353,2.363-2.352,6.059,0.002,8.412 l7.332,7.332c0.17,0.299,0.498,0.492,0.875,0.492c0.322,0,0.609-0.163,0.792-0.409l7.415-7.415 c2.354-2.354,2.354-6.049-0.002-8.416c-1.137-1.131-2.631-1.754-4.209-1.754C14.513,3.037,13.104,3.589,12,4.595z M18.791,6.205 c1.563,1.571,1.564,4.025,0.002,5.588L12,18.586l-6.793-6.793C3.645,10.23,3.646,7.776,5.205,6.209 c0.76-0.756,1.754-1.172,2.799-1.172s2.035,0.416,2.789,1.17l0.5,0.5c0.391,0.391,1.023,0.391,1.414,0l0.5-0.5 C14.719,4.698,17.281,4.702,18.791,6.205z" />
-          </svg>
-      </div>
-      <p class="pt-1 text-gray-900">{{book?.price}}</p>
-      <img src="{{book.image}}"/>
-  </a>
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+  <div *ngFor="let item of itemList">
+    <div class="p-6 bg-white rounded-lg shadow-md">
+      <h2 class="font-bold text-lg mb-2">{{ item.title }}</h2>
+      <p class="text-gray-600 text-sm">{{ item.authors }}</p>
+      <button class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" (click)="openItemDetails(item.id)">
+        Voir les détails
+      </button>
+    </div>
+  </div>
 </div>
