--- a/src/app/components/detail-item/detail-item.component.html
+++ b/src/app/components/detail-item/detail-item.component.html
@@ -1,16 +1,21 @@
-<div class="item-details">
-  <div class="item-image">
-    <img src="{{ item.cover_large }}" alt="{{ item.title }}">
-  </div>
-  <div class="item-info">
-    <h2>{{ item.title }}</h2>
-    <h3>{{ item.author_name }}</h3>
-    <p>{{ item.first_publish_year }}</p>
-    <p>{{ item.publisher }}</p>
-    <p>{{ item.number_of_pages }} pages</p>
-    <p>{{ item.language }}</p>
-    <p>{{ item.isbn_13 }}</p>
-    <p>{{ item.subjects }}</p>
-    <p>{{ item.description }}</p>
+<div class="container mx-auto p-4" *ngIf="item$ | async as item">
+  <div class="grid grid-cols-2 gap-4">
+    <div class="col-span-1">
+      <img [src]="item.image" [alt]="item.title" class="w-full">
+    </div>
+    <div class="col-span-1">
+      <h1 class="text-3xl font-bold mb-2">{{ item.title }}</h1>
+      <h2 class="text-xl font-semibold mb-2">{{ item.subtitle }}</h2>
+      <p class="text-lg mb-2"><span class="font-semibold">Authors:</span> {{ item.authors }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Publisher:</span> {{ item.publisher }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Published:</span> {{ item.published }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">ISBN-13:</span> {{ item.isbn13 }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Pages:</span> {{ item.pages }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Year:</span> {{ item.year }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Price:</span> {{ item.price }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.category }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Description:</span> {{ item.description }}</p>
+      <button class="mt-4 bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" (click)="goBackToListItems()">Retour</button>
+    </div>
   </div>
 </div>
