--- a/src/app/components/item/list-item/list-item.component.html
+++ b/src/app/components/item/list-item/list-item.component.html
@@ -3,9 +3,10 @@
     <div class="p-6 bg-white rounded-lg shadow-md">
       <h2 class="font-bold text-lg mb-2">{{ item.title }}</h2>
       <p class="text-gray-600 text-sm">{{ item.authors }}</p>
-      <button *ngIf="item.id" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" (click)="openItemDetails(item)">
+      <img [src]="item.image" alt="{{ item.title }} cover image">
+      <a *ngIf="item.isbn13" [routerLink]="['/items', item.isbn13]" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
         Voir les détails
-      </button>
+      </a>
     </div>
   </div>
 </div>
