moved detail-item in item

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,13 +1,15 @@
 <nav class="w-full z-30 top-0 py-1">
   <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-6 py-3">
-      <div class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1" id="menu">
-          <nav>
-              <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-                  <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">Shop</a></li>
-                  <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">About</a></li>
-              </ul>
-          </nav>
-      </div>
+    <div class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1" id="menu">
+      <nav>
+        <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">Articles</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">Offres spéciales</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">Recommandations personnalisées</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4">Avis clients</a></li>
+        </ul>
+      </nav>
+    </div>
       <div class="order-1 md:order-2">
         <img src="../../../assets/L2i.ico">
       </div>
