modified models for tree of category

--- a/src/app/components/item/detail-item/detail-item.component.html
+++ b/src/app/components/item/detail-item/detail-item.component.html
@@ -13,7 +13,7 @@
       <p class="text-lg mb-2"><span class="font-semibold">Pages:</span> {{ item.pages }}</p>
       <p class="text-lg mb-2"><span class="font-semibold">Year:</span> {{ item.year }}</p>
       <p class="text-lg mb-2"><span class="font-semibold">Price:</span> {{ item.price }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.category }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.categories }}</p>
       <p class="text-lg mb-2"><span class="font-semibold">Description:</span> {{ item.description }}</p>
       <button class="mt-4 bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" (click)="goBackToListItems()">Retour</button>
     </div>
