--- a/src/app/components/item/detail-item/detail-item.component.html
+++ b/src/app/components/item/detail-item/detail-item.component.html
@@ -14,6 +14,9 @@
       <p class="text-lg mb-2"><span class="font-semibold">Year:</span> {{ item.year }}</p>
       <p class="text-lg mb-2"><span class="font-semibold">Price:</span> {{ item.price }}</p>
       <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.categories }}</p>
+      <!-- <p *ngFor="let category of item.categories">
+        {{ category.name }}
+      </p> -->
       <p class="text-lg mb-2"><span class="font-semibold">Description:</span> {{ item.description }}</p>
       <button class="mt-4 bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" (click)="goBackToListItems()">Retour</button>
     </div>
