--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -3,10 +3,10 @@
     <div class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1" id="menu">
       <nav>
         <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/items">Articles</a></li>
-          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/about">À propos</a></li>
-          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/favorites">Favoris</a></li>
-          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/comments">Articles</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/item">Articles</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/promo">Promos</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/favorite">Favoris</a></li>
+          <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" routerLink="/comment">Avis</a></li>
         </ul>
       </nav>
     </div>
