--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,30 +5,23 @@
           <!-- Desktop menu -->
           <nav>
             <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" href="#">Articles</a></li>
-              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" href="#">Promos</a></li>
-              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" href="#">Favoris</a></li>
-              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" href="#">Avis</a></li>
-            </ul>
+              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/item">Articles</a></li>
+              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/promo">Promos</a></li>
+              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/favorites">Favoris</a></li>
+              <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/comment">Avis</a></li>
+              </ul>
           </nav>
       </nav>
     </div>
+      <!-- Logo -->
       <div class="order-1 md:order-2">
         <img src="../../../assets/L2i.ico">
       </div>
-
       <div class="order-2 md:order-3 flex items-center" id="nav-content">
           <a class="inline-block no-underline hover:text-black">
               <svg class="fill-current hover:text-black" width="24" height="24" viewBox="0 0 24 24">
                   <circle fill="none" cx="12" cy="7" r="3" />
                   <path d="M12 2C9.243 2 7 4.243 7 7s2.243 5 5 5 5-2.243 5-5S14.757 2 12 2zM12 10c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3S13.654 10 12 10zM21 21v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h2v-1c0-2.757 2.243-5 5-5h4c2.757 0 5 2.243 5 5v1H21z" />
-              </svg>
-          </a>
-          <a class="pl-3 inline-block no-underline hover:text-black">
-              <svg class="fill-current hover:text-black" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M21,7H7.462L5.91,3.586C5.748,3.229,5.392,3,5,3H2v2h2.356L9.09,15.414C9.252,15.771,9.608,16,10,16h8 c0.4,0,0.762-0.238,0.919-0.606l3-7c0.133-0.309,0.101-0.663-0.084-0.944C21.649,7.169,21.336,7,21,7z M17.341,14h-6.697L8.371,9 h11.112L17.341,14z" />
-                  <circle cx="10.5" cy="18.5" r="1.5" />
-                  <circle cx="17.5" cy="18.5" r="1.5" />
               </svg>
           </a>
             <!-- Cart if active -->
@@ -38,13 +31,11 @@
                 <circle cx="10.5" cy="18.5" r="1.5" />
                 <circle cx="17.5" cy="18.5" r="1.5" />
               </svg>
-              <span *ngIf=" " class="absolute top-0 right-0 h-3 w-3">
+              <span *ngIf="totalItems > 0" class="absolute top-0 right-0 h-3 w-3">
                 <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
                 <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
               </span>
             </a>
-
-
           <div class="-mr-2 flex md:hidden">
             <!-- Mobile menu button -->
             <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
@@ -75,8 +66,9 @@
         <svg class="h-6 w-6 fill-current text-gray-600" viewBox="0 0 24 24">
           <path d="M19.783 17.401l-1.1-4.4c-.116-.464-.536-.801-1.025-.801H7.667L7.214 9.63C7.112 9.255 6.766 9 6.366 9H4v2h2.366l2.93 7.84c.194.52.695.86 1.245.86h9.425c.483 0 .921-.28 1.122-.719.198-.438.112-.968-.238-1.28zM9.634 15h6.732l.822 3.278H8.812l.822-3.278zM18 19c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3zm0-4c-.551 0-1 .449-1 1s.449 1 1 1 1-.449 1-1-.449-1-1-1z"/>
         </svg>
-        <span class="absolute top-0 left-0 bg-red-500 rounded-full text-white font-bold px-2 py-1 text-xs">0</span>
       </button>
+      <span class="absolute top-0 left-0 bg-red-500 rounded-full text-white font-bold px-2 py-1 text-xs">0</span>
+
       <!-- Cart dropdown -->
       <div class="hidden bg-white rounded-lg shadow-md mt-2 w-48">
         <div class="flex justify-between items-center px-3 py-2 bg-gray-200">
@@ -96,9 +88,5 @@
       </div>
     </div>
       </div>
-
-
-
-
   </div>
 </nav>
