--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -36,6 +36,7 @@
                 <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
               </span>
             </a>
+            <!-- Cart button for mobile responsive -->
           <div class="-mr-2 flex md:hidden">
             <!-- Mobile menu button -->
             <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
@@ -60,33 +61,7 @@
               </svg>
             </button>
           </div>
-          <!-- Cart button -->
-    <div class="ml-4 relative">
-      <button class="flex items-center text-sm focus:outline-none">
-        <svg class="h-6 w-6 fill-current text-gray-600" viewBox="0 0 24 24">
-          <path d="M19.783 17.401l-1.1-4.4c-.116-.464-.536-.801-1.025-.801H7.667L7.214 9.63C7.112 9.255 6.766 9 6.366 9H4v2h2.366l2.93 7.84c.194.52.695.86 1.245.86h9.425c.483 0 .921-.28 1.122-.719.198-.438.112-.968-.238-1.28zM9.634 15h6.732l.822 3.278H8.812l.822-3.278zM18 19c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3zm0-4c-.551 0-1 .449-1 1s.449 1 1 1 1-.449 1-1-.449-1-1-1z"/>
-        </svg>
-      </button>
-      <span class="absolute top-0 left-0 bg-red-500 rounded-full text-white font-bold px-2 py-1 text-xs">0</span>
 
-      <!-- Cart dropdown -->
-      <div class="hidden bg-white rounded-lg shadow-md mt-2 w-48">
-        <div class="flex justify-between items-center px-3 py-2 bg-gray-200">
-          <h3 class="text-sm font-medium text-gray-600">Panier</h3>
-          <button class="text-gray-600 focus:outline-none">
-            <svg class="h-5 w-5 fill-current" viewBox="0 0 24 24">
-              <path d="M18.293 5.293L12 11.586 5.707 5.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 001.414 1.414L12 12.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414z"/>
-            </svg>
-          </button>
-        </div>
-        <div class="flex flex-col items-center p-2">
-          <p class="text-sm text-gray-600 mt-3">Votre panier est vide</p>
-          <button class="bg-green-500 hover:bg-green-600 text-white text-sm font-medium rounded-md px-4 py-2 mt-6">
-            Acheter
-          </button>
-        </div>
-      </div>
-    </div>
       </div>
   </div>
 </nav>
