--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
@@ -5,3 +6,4 @@
 
 html, body { height: 100%; }
 body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
