split smart component for cart

--- a/src/app/components/aside/cart/cart.component.html
+++ b/src/app/components/aside/cart/cart.component.html
@@ -1,8 +1,8 @@
-<div class="cart-slide" [class.active]="isCartOpen">
+<div class="cart-slide">
   <header class="cart-header">
     <div class="container mx-auto flex justify-between items-center px-4">
       <h2 class="text-2xl font-medium">Panier</h2>
-      <button class="text-white focus:outline-none" (click)="closeCart()">
+      <button class="text-white focus:outline-none">
         <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
           <path d="M6.707 19.293a1 1 0 0 0 1.414 0L12 13.414l3.879 3.88a1 1 0 0 0 1.414-1.414L13.414 12l3.88-3.879a1 1 0 0 0-1.414-1.414L12 10.586 8.121 6.707a1 1 0 0 0-1.414 1.414L10.586 12l-3.88 3.879z" />
         </svg>
