--- a/src/app/components/aside/aside.component.html
+++ b/src/app/components/aside/aside.component.html
@@ -1,16 +1,42 @@
-<aside class="fixed top-0 right-0 w-1/2 h-full bg-white z-40 shadow transform translate-x-full transition-transform ease-in-out duration-300" [class.active]="isCartOpen">
-  <button class="fixed bottom-0 right-0 z-50 p-4 bg-indigo-500 text-white rounded-full shadow-md" (click)="toggleCart()">
-    <!-- Cart button -->
-    <div class="ml-4 relative">
-      <button class="flex items-center text-sm focus:outline-none">
-        <svg class="h-6 w-6 fill-current text-gray-600" viewBox="0 0 24 24">
-          <path d="M19.783 17.401l-1.1-4.4c-.116-.464-.536-.801-1.025-.801H7.667L7.214 9.63C7.112 9.255 6.766 9 6.366 9H4v2h2.366l2.93 7.84c.194.52.695.86 1.245.86h9.425c.483 0 .921-.28 1.122-.719.198-.438.112-.968-.238-1.28zM9.634 15h6.732l.822 3.278H8.812l.822-3.278zM18 19c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3zm0-4c-.551 0-1 .449-1 1s.449 1 1 1 1-.449 1-1-.449-1-1-1z"/>
-        </svg>
-      </button>
-      <span class="absolute top-0 left-0 bg-red-500 rounded-full text-white font-bold px-2 py-1 text-xs">0</span>
-    </div>
-  </button>
-  <div class="flex-1 overflow-y-auto">
-    <app-cart></app-cart>
-  </div>
+<aside class="cart-button">
+  <a routerLink="#" class="relative ml-3" (click)="toggleCartDrawer()">
+    <svg class="h-6 w-6 text-gray-600" viewBox="0 0 24 24">
+      <path fill="currentColor" d="M21,7H7.462L5.91,3.586C5.748,3.229,5.392,3,5,3H2v2h2.356L9.09,15.414C9.252,15.771,9.608,16,10,16h8 c0.4,0,0.762-0.238,0.919-0.606l3-7c0.133-0.309,0.101-0.663-0.084-0.944C21.649,7.169,21.336,7,21,7z M17.341,14h-6.697L8.371,9 h11.112L17.341,14z" />
+      <circle cx="10.5" cy="18.5" r="1.5" />
+      <circle cx="17.5" cy="18.5" r="1.5" />
+    </svg>
+    <span *ngIf="totalItems$ != null" class="absolute top-0 right-0 h-3 w-3">
+      <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
+      <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
+    </span>
+    <span class="text-gray-400 ml-1">{{ totalItems$ || '' }}</span>
+  </a>
 </aside>
+
+<!-- <aside [class.active]="isCartPanelOpen$">
+  <mat-drawer-container class="cart-container">
+    <mat-drawer mat-drawer-over position="end" #cartDrawer>
+      <mat-toolbar class="cart-toolbar">
+        <span>Mon Panier</span>
+        <button mat-icon-button (click)="closeCartDrawer()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-toolbar>
+      <app-cart></app-cart>
+    </mat-drawer>
+    <div class="cart-button">
+      <a routerLink="#" class="relative ml-3" (click)="toggleCartDrawer()">
+        <svg class="h-6 w-6 text-gray-600" viewBox="0 0 24 24">
+          <path fill="currentColor" d="M21,7H7.462L5.91,3.586C5.748,3.229,5.392,3,5,3H2v2h2.356L9.09,15.414C9.252,15.771,9.608,16,10,16h8 c0.4,0,0.762-0.238,0.919-0.606l3-7c0.133-0.309,0.101-0.663-0.084-0.944C21.649,7.169,21.336,7,21,7z M17.341,14h-6.697L8.371,9 h11.112L17.341,14z" />
+          <circle cx="10.5" cy="18.5" r="1.5" />
+          <circle cx="17.5" cy="18.5" r="1.5" />
+        </svg>
+        <span *ngIf="totalItems$ > 0" class="absolute top-0 right-0 h-3 w-3">
+          <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
+          <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
+        </span>
+        <span class="text-gray-400 ml-1" *ngIf="totalItems$ > 0">{{ totalItems$ }}</span>
+      </a>
+    </div>
+  </mat-drawer-container>
+</aside> -->
