added meilisearch to the app

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,10 +2,10 @@
   <div class=" flex w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-6 py-3">
     <!-- Desktop menu -->
     <ul class="w-full md:w-auto md:justify-start md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/item">Articles</a></li>
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/promo">Promos</a></li>
+      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/items">Articles</a></li>
+      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/promos">Promos</a></li>
       <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/favorites">Favoris</a></li>
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/comment">Avis</a></li>
+      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/comments">Avis</a></li>
     </ul>
       <!-- Logo -->
       <a class="nav-logo flex-1 flex items-center justify-center" routerLink="/">
