--- a/src/app/pages/item/item-page.component.html
+++ b/src/app/pages/item/item-page.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<app-header></app-header>
+<app-section></app-section>
 <app-item-category-nav></app-item-category-nav>
 <app-list-item></app-list-item>
