--- a/src/app/components/item/detail-item/detail-item.component.html
+++ b/src/app/components/item/detail-item/detail-item.component.html
@@ -1,19 +1,19 @@
 <div class="container mx-auto p-4" *ngIf="item$ | async as item">
   <div class="grid grid-cols-2 gap-4">
     <div class="col-span-1">
-      <img [src]="item.image" [alt]="item.title" class="w-full">
+      <img [src]="item.imageUrl" [alt]="item.book.title" class="w-full">
     </div>
     <div class="col-span-1">
-      <h1 class="text-3xl font-bold mb-2">{{ item.title }}</h1>
-      <h2 class="text-xl font-semibold mb-2">{{ item.subtitle }}</h2>
-      <p class="text-lg mb-2"><span class="font-semibold">Authors:</span> {{ item.authors }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Publisher:</span> {{ item.publisher }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Published:</span> {{ item.published }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">ISBN-13:</span> {{ item.isbn13 }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Pages:</span> {{ item.pages }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Year:</span> {{ item.year }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Price:</span> {{ item.price }}</p>
-      <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.categories }}</p>
+      <h1 class="text-3xl font-bold mb-2">{{ item.book.title }}</h1>
+      <h2 class="text-xl font-semibold mb-2">{{ item.book.subtitle }}</h2>
+      <p class="text-lg mb-2"><span class="font-semibold">Authors:</span> {{ item.book.authors }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Publisher:</span> {{ item.book.editor }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Published:</span> {{ item.book.year }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">ISBN-13:</span> {{ item.book.isbn13 }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Pages:</span> {{ item.book.pages }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Year:</span> {{ item.book.year }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Price:</span> {{ item.regularPrice }}</p>
+      <p class="text-lg mb-2"><span class="font-semibold">Category:</span> {{ item.category }}</p>
       <!-- <p *ngFor="let category of item.categories">
         {{ category.name }}
       </p> -->
