--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -1,5 +1,3 @@
-<section class="bg-white py-8">
-  <div class="container mx-auto flex items-center flex-wrap pt-4 pb-12">
-    <!-- <app-search-item></app-search-item> -->
-  </div>
+<section class="search-section">
+  <app-search-item></app-search-item>
 </section>
