--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,51 +1,28 @@
-<nav class="w-full z-30 top-0 py-1">
-  <div class=" flex w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-6 py-3">
+<mat-toolbar class="nav-container">
+  <div class="nav-wrapper">
     <!-- Desktop menu -->
-    <ul class="w-full md:w-auto md:justify-start md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/items">Articles</a></li>
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/promos">Promos</a></li>
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/favorites">Favoris</a></li>
-      <li><a class="px-4 py-2 mt-2 inline-block text-gray-400 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:text-gray-900 focus:bg-gray-100 transition duration-150 ease-in-out" routerLink="/comments">Avis</a></li>
-    </ul>
-      <!-- Logo -->
-      <a class="nav-logo flex-1 flex items-center justify-center" routerLink="/">
+    <div class="menu">
+      <button mat-button [routerLink]="['/items']">Articles</button>
+      <button mat-button [routerLink]="['/promos']">Promos</button>
+      <button mat-button [routerLink]="['/favorites']">Favoris</button>
+      <button mat-button [routerLink]="['/comments']">Avis</button>
+    </div>
+    <!-- Logo and Search bar -->
+    <div class="logo-search-container">
+      <a class="nav-logo" routerLink="/">
         <img src="../../../assets/L2i.ico">
       </a>
-      <div class="order-2 md:order-3 flex items-center" id="nav-content">
-        <!-- User button for connection -->
-        <a class="inline-block no-underline hover:text-black">
-          <svg class="fill-current hover:text-black" width="24" height="24" viewBox="0 0 24 24">
-            <circle fill="none" cx="12" cy="7" r="3" />
-            <path d="M12 2C9.243 2 7 4.243 7 7s2.243 5 5 5 5-2.243 5-5S14.757 2 12 2zM12 10c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3S13.654 10 12 10zM21 21v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h2v-1c0-2.757 2.243-5 5-5h4c2.757 0 5 2.243 5 5v1H21z" />
-          </svg>
-        </a>
-        <!-- Cart drawer for shopping -->
-        <app-aside></app-aside>
-        <!-- For mobile responsive -->
-        <div class="-mr-2 flex md:hidden">
-          <!-- Mobile menu button -->
-          <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <!-- Icon when menu is closed. -->
-            <!--
-              Heroicon name: outline/menu
-
-              Menu open: "hidden", Menu closed: "block"
-            -->
-            <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-            <!-- Icon when menu is open. -->
-            <!--
-              Heroicon name: outline/x
-
-              Menu open: "block", Menu closed: "hidden"
-            -->
-            <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-      </div>
+      <app-search-item *ngIf="router.url !== '/'" class="search-bar-large"></app-search-item>
+    </div>
+    <div class="nav-actions">
+      <!-- User button for connection -->
+      <button mat-icon-button [routerLink]="['/']">
+        <mat-icon>account_circle</mat-icon>
+      </button>
+    </div>
   </div>
-</nav>
+  <!-- Cart drawer for shopping -->
+  <div class="nav-aside">
+    <app-aside></app-aside>
+  </div>
+</mat-toolbar>
