--- a/src/app/components/aside/cart/cart.component.css
+++ b/src/app/components/aside/cart/cart.component.css
@@ -1,44 +1,8 @@
-h2 {
-  @layer text-2xl font-medium mb-4;
-}
-.cart-header {
+table {
+  width: 100%;
 }
 
-.cart-item {
-  @layer flex items-center justify-between px-4 py-3 border-b;
-}
-
-.cart-item img {
-  @layer h-16 mr-4;
-}
-
-.cart-item .title {
-  @layer text-lg font-medium;
-}
-
-.cart-item .price {
-  @layer font-medium text-gray-700;
-}
-
-.cart-item .quantity {
-  @layer text-gray-500;
-}
-
-.total-price {
-  @layer font-medium text-lg text-gray-700 mb-4;
-}
-
-.checkout-button {
-  @layer bg-green-500 hover:bg-green-600 text-white text-sm font-medium rounded-md px-4 py-2;
-}
-
-/* Styles pour la slide du panier */
-.cart-slide {
-  transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
-}
-
-.cart-slide.active {
-  transform: translateX(0%);
+table td th{
+  padding: 10px;
 }
 
