modified cart style with material

--- a/src/app/components/aside/aside.component.css
+++ b/src/app/components/aside/aside.component.css
@@ -1,28 +1,34 @@
 .cart-container {
-  position: fixed;
-  top: 0;
-  right: -450px;
-  bottom: 0;
-  width: 450px;
-  z-index: 1000;
-  transition: right 0.3s ease-in-out;
-}
-
-.cart-container.active {
-  right: 0;
-}
-
-mat-drawer {
   height: 100%;
 }
 
 .cart-toolbar {
-  background-color: #f44336;
-  color: white;
+  background-color: #f5f5f5;
+  color: #444;
+  height: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .cart-button {
+  display: flex;
+  align-items: center;
   position: relative;
+  margin-right: 2rem;
+}
+
+.cart-button svg {
+  height: 24px;
+  width: 24px;
+  fill: currentColor;
+}
+
+.cart-button .text-gray-400 {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.5;
+  color: #718096;
 }
 
 .cart-button .animate-ping {
@@ -33,17 +39,32 @@ mat-drawer {
   position: relative;
 }
 
+.cart-button .absolute {
+  position: absolute;
+}
+
+.cart-button .h-3 {
+  height: 12px;
+}
+
+.cart-button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 3rem;
+}
+
 @keyframes ping {
   0% {
-    transform: scale(1);
-    opacity: 0.6;
+    transform: scale(0.5);
+    opacity: 0.5;
   }
   50% {
-    transform: scale(1.2);
+    transform: scale(1);
     opacity: 1;
   }
   100% {
-    transform: scale(1);
-    opacity: 0.6;
+    transform: scale(2);
+    opacity: 0;
   }
 }
