--- a/src/app/components/aside/aside.component.html
+++ b/src/app/components/aside/aside.component.html
@@ -1,19 +1,4 @@
-<aside class="cart-button">
-  <a routerLink="#" class="relative ml-3" (click)="toggleCartDrawer()">
-    <svg class="h-6 w-6 text-gray-600" viewBox="0 0 24 24">
-      <path fill="currentColor" d="M21,7H7.462L5.91,3.586C5.748,3.229,5.392,3,5,3H2v2h2.356L9.09,15.414C9.252,15.771,9.608,16,10,16h8 c0.4,0,0.762-0.238,0.919-0.606l3-7c0.133-0.309,0.101-0.663-0.084-0.944C21.649,7.169,21.336,7,21,7z M17.341,14h-6.697L8.371,9 h11.112L17.341,14z" />
-      <circle cx="10.5" cy="18.5" r="1.5" />
-      <circle cx="17.5" cy="18.5" r="1.5" />
-    </svg>
-    <span *ngIf="totalItems$ != null" class="absolute top-0 right-0 h-3 w-3">
-      <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
-      <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
-    </span>
-    <span class="text-gray-400 ml-1">{{ totalItems$ || '' }}</span>
-  </a>
-</aside>
-
-<!-- <aside [class.active]="isCartPanelOpen$">
+<aside [class.active]="isCartPanelOpen$">
   <mat-drawer-container class="cart-container">
     <mat-drawer mat-drawer-over position="end" #cartDrawer>
       <mat-toolbar class="cart-toolbar">
@@ -31,12 +16,12 @@
           <circle cx="10.5" cy="18.5" r="1.5" />
           <circle cx="17.5" cy="18.5" r="1.5" />
         </svg>
-        <span *ngIf="totalItems$ > 0" class="absolute top-0 right-0 h-3 w-3">
-          <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
-          <span class="relative inline-flex rounded-full h-3 w-3 bg-blue-500"></span>
+        <span *ngIf="totalItems$ != null && totalItems$ > 0" class="absolute top-0 right-0 h-3 w-3">
+          <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
+          <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500"></span>
         </span>
-        <span class="text-gray-400 ml-1" *ngIf="totalItems$ > 0">{{ totalItems$ }}</span>
       </a>
+      <div class="text-gray-400 ml-1 cart-item-count" *ngIf="totalItems$ != null">{{ totalItems$ }}</div>
     </div>
   </mat-drawer-container>
-</aside> -->
+</aside>
