--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,10 +2,10 @@
   <div class="nav-wrapper">
     <!-- Desktop menu -->
     <div class="menu">
-      <button mat-button [routerLink]="['/items']">Articles</button>
-      <button mat-button [routerLink]="['/promos']">Promos</button>
-      <button mat-button [routerLink]="['/favorites']">Favoris</button>
-      <button mat-button [routerLink]="['/comments']">Avis</button>
+      <button mat-button routerLink="/items">Articles</button>
+      <button mat-button routerLink="/promos">Promos</button>
+      <button mat-button routerLink="/favorites">Favoris</button>
+      <button mat-button routerLink="/comments">Avis</button>
     </div>
     <!-- Logo and Search bar -->
     <div class="logo-search-container">
@@ -16,7 +16,7 @@
     </div>
     <div class="nav-actions">
       <!-- User button for connection -->
-      <button mat-icon-button [routerLink]="['/']">
+      <button mat-icon-button routerLink="/">
         <mat-icon>account_circle</mat-icon>
       </button>
     </div>
