--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,22 @@
+header {
+    padding-top: 3.3rem;
+    padding-bottom: 3.3rem;
+}
 .work-sans {
   font-family: 'Work Sans', sans-serif;
+}
+
+.carousel-item > div {
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.carousel-item > div {
+  height: 50vh;
+  object-fit: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 #menu-toggle:checked + #menu {
@@ -20,9 +37,9 @@
   opacity: 100;
 }
 
-.carousel-item {
-  -webkit-transition: opacity 0.6s ease-out;
-  transition: opacity 0.6s ease-out;
+.carousel-bullet-active {
+  font-weight: bold;
+  color: #000;
 }
 
 #carousel-1:checked ~ .control-1,
@@ -47,5 +64,5 @@
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
   color: #000;
-  /*Set to match the Tailwind colour you want the active one to be */
 }
+
