--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,63 +1,26 @@
-<div class="carousel relative container mx-auto" style="max-width:1600px;">
-      <div class="carousel-inner relative overflow-hidden w-full">
-          <!--Slide 1-->
-          <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
-          <div class="carousel-item absolute opacity-0" style="height:50vh;">
-            <div class="block h-full w-full mx-auto flex pt-6 md:pt-0 md:items-center bg-cover bg-bottom" style="background-image: url('https://images.unsplash.com/photo-1519327232521-1ea2c736d34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80');">
-              <div class="container mx-auto">
-                      <div class="flex flex-col w-full lg:w-1/2 md:ml-16 items-center md:items-start px-6 tracking-wide">
-                          <a class="text-xl inline-block no-underline border-b border-gray-600 leading-relaxed hover:text-black hover:border-black" href="#">Top1 book</a>
-                      </div>
-                  </div>
+<header>
+  <div class="carousel relative container mx-auto"  style="max-width: 1600px">
+    <div class="carousel-inner relative overflow-hidden w-full">
+      <div *ngFor="let book of books; let i = index">
+        <!--Slides-->
+        <input class="carousel-open" type="radio" id="carousel-{{i + 1}}" name="carousel" aria-hidden="true" hidden="" [attr.checked]="i === 0 ? 'checked' : null" (change)="currentSlide = i">
+        <div class="carousel-item absolute opacity-0" style="height:50vh;">
+          <div class="block h-full w-full mx-auto flex pt-6 md:pt-0 md:items-center book-image-container" [style]="{'background-image': 'url(' + book.image + ')', 'background-size': 'contain', 'background-repeat': 'no-repeat', 'background-position': 'center center'}">
+            <div class="container mx-auto">
+              <div class="flex flex-col w-full lg:w-1/2 md:ml-16 items-center md:items-start px-6 tracking-wide">
               </div>
+            </div>
           </div>
-          <label for="carousel-3" class="prev control-1 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-          <label for="carousel-2" class="next control-1 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
-
-          <!--Slide 2-->
-          <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
-          <div class="carousel-item absolute opacity-0 bg-cover bg-right" style="height:50vh;">
-            <div class="block h-full w-full mx-auto flex pt-6 md:pt-0 md:items-center bg-cover bg-bottom" style="background-image: url('https://images.unsplash.com/photo-1519327232521-1ea2c736d34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80');">
-
-                  <div class="container mx-auto">
-                      <div class="flex flex-col w-full lg:w-1/2 md:ml-16 items-center md:items-start px-6 tracking-wide">
-                          <a class="text-xl inline-block no-underline border-b border-gray-600 leading-relaxed hover:text-black hover:border-black" href="#">Top2 book</a>
-                      </div>
-                  </div>
-
-              </div>
-          </div>
-          <label for="carousel-1" class="prev control-2 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900  leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-          <label for="carousel-3" class="next control-2 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900  leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
-
-          <!--Slide 3-->
-          <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
-          <div class="carousel-item absolute opacity-0" style="height:50vh;">
-              <div class="block h-full w-full mx-auto flex pt-6 md:pt-0 md:items-center bg-cover bg-bottom" style="background-image: url('https://images.unsplash.com/photo-1519327232521-1ea2c736d34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80');">
-
-                  <div class="container mx-auto">
-                      <div class="flex flex-col w-full lg:w-1/2 md:ml-16 items-center md:items-start px-6 tracking-wide">
-                        <a class="text-xl inline-block no-underline border-b border-gray-600 leading-relaxed hover:text-black hover:border-black" href="#">Top3 book</a>
-                      </div>
-                  </div>
-
-              </div>
-          </div>
-          <label for="carousel-2" class="prev control-3 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900  leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-          <label for="carousel-1" class="next control-3 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900  leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
-
-          <ol class="carousel-indicators">
-              <li class="inline-block mr-3">
-                  <label for="carousel-1" class="carousel-bullet cursor-pointer block text-4xl text-gray-400 hover:text-gray-900">•</label>
-              </li>
-              <li class="inline-block mr-3">
-                  <label for="carousel-2" class="carousel-bullet cursor-pointer block text-4xl text-gray-400 hover:text-gray-900">•</label>
-              </li>
-              <li class="inline-block mr-3">
-                  <label for="carousel-3" class="carousel-bullet cursor-pointer block text-4xl text-gray-400 hover:text-gray-900">•</label>
-              </li>
-          </ol>
-
+        </div>
+        <label *ngIf="i > 0" for="carousel-{{i}}" class="prev control-{{i + 1}} w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
+        <label *ngIf="i < books.length - 1" for="carousel-{{i + 2}}" class="next control-{{i + 1}} w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-gray-900 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
       </div>
-</div>
 
+      <ol class="carousel-indicators">
+        <li class="inline-block mr-3" *ngFor="let book of books; let i = index">
+          <label for="carousel-{{i + 1}}" class="carousel-bullet cursor-pointer block text-4xl text-gray-400 hover:text-gray-900" [ngClass]="{'carousel-bullet-active': currentSlide === i}">•</label>
+        </li>
+      </ol>
+    </div>
+  </div>
+</header>
