--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="nav-wrapper">
     <!-- Desktop menu -->
     <div class="menu">
-      <button mat-button routerLink="/items">Articles</button>
+      <button mat-button routerLink="/items">Catégories</button>
       <button mat-button routerLink="/promos">Promos</button>
       <button mat-button routerLink="/favorites">Favoris</button>
       <button mat-button routerLink="/comments">Avis</button>
