displayed list of items with search bar or by category tab

--- a/src/app/components/item/search-item/search-item.component.html
+++ b/src/app/components/item/search-item/search-item.component.html
@@ -1,7 +1,17 @@
 <div class="search-container flex justify-center">
   <label class="relative max-w-full w-2/3">
-    <input matInput #searchInput (input)="search(searchInput.value)" placeholder="Rechercher votre article" class="input-field w-full">
-    <button mat-icon-button aria-label="Trouver votre article" (click)="searchInput.value = ''" class="search-button">
+    <input
+      matInput
+      [formControl]="searchInput"
+      placeholder="Rechercher votre article"
+      class="input-field w-full"
+    />
+    <button
+      mat-icon-button
+      aria-label="Trouver votre article"
+      (click)="searchInput.setValue('')"
+      class="search-button"
+    >
       <ng-container *ngIf="!searchInput.value">
         <mat-icon>search</mat-icon>
       </ng-container>
@@ -9,6 +19,5 @@
         <mat-icon>close</mat-icon>
       </ng-container>
     </button>
-    <!-- <button class="px-4 py-2 bg-indigo-500 text-white rounded-md hover:bg-indigo-600">Se connecter</button> -->
   </label>
 </div>
