added dynamic search bar with focus service

--- a/src/app/components/item/search-item/search-item.component.html
+++ b/src/app/components/item/search-item/search-item.component.html
@@ -1,11 +1,14 @@
 <div class="search-container flex justify-center">
   <label class="relative max-w-full w-2/3">
     <input
+      id="searchInputElement"
+      #searchInputElement
       matInput
       [formControl]="searchInput"
       placeholder="Rechercher votre article"
       class="input-field w-full"
     />
+
     <button
       mat-icon-button
       aria-label="Trouver votre article"
