--- a/src/app/components/item/list-item/list-item.component.html
+++ b/src/app/components/item/list-item/list-item.component.html
@@ -1,6 +1,28 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-  <div *ngFor="let item of itemList$ | async">
-    <img [src]="item.imageUrl" alt="{{ item.title }} cover image">
-    <button (click)="openItemDetails(item)">View Details</button>
+<div class="container">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    <div *ngFor="let item of itemList$ | async">
+      <mat-card class="custom-card" (click)="openItemDetails(item)">
+        <img mat-card-image [src]="item.imageUrl" alt="{{ item.title }} cover image">
+        <p>{{ item.subtitle }}</p>
+        <mat-card-actions class="custom-card-actions">
+          <button mat-icon-button color="primary" (click)="addToFavorites(item, $event)">
+            <mat-icon>favorite</mat-icon>
+          </button>
+          <mat-card-header>
+            <mat-card-title>{{ item.regularPrice }} $</mat-card-title>
+          </mat-card-header>
+          <button mat-icon-button color="accent" (click)="addToCart(item, $event)">
+            <mat-icon>shopping_cart</mat-icon>
+          </button>
+        </mat-card-actions>
+        <div class="rating">
+          <ng-container *ngFor="let starIndex of [1, 2, 3, 4, 5]">
+            <ng-container *ngIf="item">
+              <mat-icon>star</mat-icon>
+            </ng-container>
+          </ng-container>
+        </div>
+      </mat-card>
+    </div>
   </div>
 </div>
