Modified and unified search bar location

--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -1,3 +1,1 @@
-<section class="search-section">
-  <app-search-item></app-search-item>
-</section>
+<p>Mettre une bande passante avec les promos !! !!</p>
