added navSide for filtering items

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,7 +5,7 @@
     </a>
       <!-- Desktop menu -->
     <div class="menu">
-      <button mat-button routerLink="/items">Catégories</button>
+      <button mat-button routerLink="/items">Articles</button>
       <button mat-button routerLink="/promos">Promos</button>
       <button mat-button routerLink="/favorites">Favoris</button>
       <button mat-button routerLink="/comments">Avis</button>
