--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
 <app-header></app-header>
-<app-section></app-section>
+<p>Mettre une bande passante avec les promos !! !!</p>
 
