--- a/src/app/components/section/filters-item/filters-item.component.css
+++ b/src/app/components/section/filters-item/filters-item.component.css
@@ -51,3 +51,114 @@ p {
   font-size: 0.8rem;
   color: #666;
 }
+
+.yellow-star {
+  color: gold;
+}
+
+.gray-star {
+  color: gray;
+}
+
+/* Configs: */
+
+.list-identation {
+  padding-left: 1.2em;
+}
+
+.list-between-spacing {
+  margin: 0.2em 0;
+}
+
+.list-carret-character {
+  content: "\f0da";
+  font-family: "FontAwesome";
+  visibility: visible;
+  font-size: 14px;
+  position: absolute;
+  left: 0;
+  top: -1.45em;
+  transition: transform 0.3s;
+}
+
+
+/* Just some border in the main list: */
+
+body > ul{
+  border-left: 5px solid #DDD;
+}
+
+
+/* Tree list styles: */
+
+ul.tree-list{
+  font-family: 'Roboto', sans-serif;
+}
+
+ul.tree-list li{
+  list-style: none;
+  padding: 0.2em 0;
+}
+
+ul.tree-list li label{
+  display: inline-block;
+  margin-left: 0.5em;
+  padding: 0.2em 0.3em;
+  border-radius: 0.2em;
+}
+
+ul.tree-list ul {
+  padding-left: 1.2em;
+  position: relative;
+}
+
+
+ul.tree-list ul li{
+  display: none;
+}
+
+ul.tree-list ul:before {
+  content: "\f0da";
+  font-family: "FontAwesome";
+  visibility: visible;
+  font-size: 14px;
+  position: absolute;
+  left: 0;
+  top: -1.45em;
+  transition: transform 0.3s;
+}
+
+
+ul.tree-list input.cb-collapsable{
+  width: 100%;
+  position: absolute;
+  cursor: pointer!important;
+  margin-top: 0.5em;
+  opacity: 0;
+}
+
+ul.tree-list input.cb-collapsable:hover + label{
+  background-color: #EEE;
+}
+ul.tree-list input.cb-collapsable ~ ul:before{
+  content: '\f0da';
+        font-family: 'FontAwesome';
+        visibility: visible;
+        font-size: 14px;
+        position: absolute;
+        left: 0;
+        top: -1.45em;
+        transition: transform 0.3s
+}
+
+ul.tree-list input.cb-collapsable:checked ~ ul:before{
+  transform: rotate(90deg);
+}
+
+ul.tree-list input.cb-collapsable:checked ~ ul li{
+  display: block;
+}
+
+.cb-collapsable{
+  padding: auto;
+}
